lessons/143-go-golang-vs-node-js-performance-benchmark/gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: istio
  namespace: gateway
  annotations:
    # Cert Manager specific: only if you automaticly issue certificate
    # when readt, switch to production-cluster-issuer
    # cert-manager.io/cluster-issuer: production-cluster-issuer
    # AWS specific: upgrade classic LB to Network Load Balancer
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    # AWS specific: provision private load balancer
    # service.beta.kubernetes.io/aws-load-balancer-internal: "true"
spec:
  gatewayClassName: istio
  listeners:
  - name: api-http
    hostname: "*.devopsbyexample.com"
    port: 80 # requred for letsencrypt
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All # requred for letsencrypt
  # - name: api-https
  #   protocol: HTTPS # Other possible value is `TLS`
  #   port: 443
  #   hostname: apiv2.devopsbyexample.com
  #   tls:
  #     mode: Terminate # If protocol is `TLS`, `Passthrough` is a possible mode
  #     certificateRefs:
  #     - kind: Secret
  #       group: ""
  #       name: apiv2-devopsbyexample-com-cert
  #   allowedRoutes:
  #     namespaces:
  #       from: All
